tests/parser/good/grouping.gbl
fn f() {
	var a = (1 + 2);
	var b = (1 + 2) * 3;
	var c = 2 * (3 + 4);
	var d = ((1 + 2) * (3 - 4));
	var e = (a && b) || c;
}
