tests/parser/errors/funcdec_no_rbrace.gbl
fn foo() {
	var a = 1;
